chore: add react-native-gradient and resolve app name

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "animated-header",
-  "displayName": "animated-header"
+  "name": "animated_header",
+  "displayName": "animated_header"
 }
