--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "animated_header",
+  "name": "animated_test",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -12,13 +12,14 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.7.1",
+    "@react-navigation/stack": "^5.7.1",
     "react": "16.13.1",
     "react-native": "0.63.1",
-    "react-native-gesture-handler": "^1.6.1",
-    "react-native-reanimated": "^1.9.0",
+    "react-native-gesture-handler": "^1.7.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-reanimated": "^1.10.1",
     "react-native-safe-area-context": "^3.1.1",
-    "react-native-screens": "^2.9.0",
-    "uuid": "^8.2.0"
+    "react-native-screens": "^2.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
@@ -27,7 +28,7 @@
     "babel-jest": "^26.1.0",
     "eslint": "^7.5.0",
     "jest": "^26.1.0",
-    "metro-react-native-babel-preset": "^0.60.0",
+    "metro-react-native-babel-preset": "^0.61.0",
     "react-test-renderer": "16.13.1"
   },
   "jest": {
